--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <div class="card">
-            <img class="avatar" src="images/image_project.png">
+            <img class="avatar" src="/image_project.png">
             <div class="info">
                 <h3>Hanna</h3>
                 <p>Frontend Developer</p>
